dropdown html + css

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/menu.css">
     <link rel="stylesheet" href="../css/menu-module.css">
@@ -14,7 +15,15 @@
     <nav class="nav">
         <span class="open-btn">&#9776;</span>
         <a href="#">Link1</a>
-        <a href="#">Link2</a>
+        <div class="dropdown">
+            <button>Link2<i class="fas fa-angle-down"></i></button>
+            <ul>
+                <li><a href="#">Weather App</a></li>
+                <li><a href="#">Music App</a></li>
+                <li><a href="#">React App</a></li>
+                <li><a href="#">Youtube App</a></li>
+            </ul>
+        </div>
         <a href="#">Link3</a>
         <a href="#">Link4</a>
         <a href="#">Link5</a>
